# specforge-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/hello-world/: spec.yaml
examples/hello-world/docs/: product.md
examples/hello-world/docs/architecture/: overview.md
examples/hello-world/prompts/: scaffold.md
src/spec_compiler/: __init__.py  __main__.py  bundle.py  bundle_glob.py  changelog.py  cli.py  compile.py  constants.py  frontmatter.py  output.py  prompts_routing.py  routing.py  schema.py
src/spec_compiler/engines/: __init__.py  anthropic_engine.py  base.py  local_engine.py  openai_engine.py
tests/: test_bundle.py  test_bundle_tiers.py  test_compile_dry_run.py  test_frontmatter.py  test_is_bundle_md.py  test_output.py  test_prompts_routing.py  test_routing.py  test_schema.py
